# dumb_compiler

kernel/: dune-project  input.meleon  translation.meleon
kernel/_build/: .db  .digest-db  log
kernel/_build/default/: kernel.install  kernel.opam
kernel/_build/default/.dune/: configurator  configurator.v2
kernel/_build/default/.ppx/0bb5094b13567c3c4e1ee33245b80e63/: dune__exe___ppx.cmi  dune__exe___ppx.cmo
kernel/_build/default/.ppx/6c6fd9e18b06fcb8edd0b30764292ddb/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
kernel/_build/default/.ppx/bccc2ae0a3d8b64dde8d217e10afb136/: dune__exe___ppx.cmo
kernel/_build/default/lib/: execution.ml  execution.pp.ml  kernel.cma  kernel.cmxa  kernel.cmxs  kernel.ml-gen
kernel/_build/default/lib/.kernel.objs/: kernel__Debug.impl.d  kernel__Execution.impl.all-deps  kernel__Execution.impl.d  kernel__Expression.impl.d  kernel__Interpreter.impl.all-deps  kernel__Interpreter.impl.d  kernel__Lowerer.impl.d  kernel__Parser.impl.all-deps  kernel__Parser.impl.d  kernel__Parser_.impl.d  kernel__Parser_.intf.d  kernel__Reader.impl.d  kernel__Tokenizer.impl.d  kernel__Tokenizer_.impl.d  parser___mock.impl.d
kernel/_build/default/lib/.merlin-conf/: lib-kernel
kernel/_build/default/lib/nodes/: expression.pp.ml
kernel/_build/default/lib/steps/: interpreter.ml  interpreter.pp.ml  lowerer.ml  lowerer.pp.ml  parser.ml  parser.pp.ml  parser_.ml  parser_.mli  parser_.mly  (+10 more)
kernel/lib/: dune  execution.ml
kernel/lib/nodes/: expression.ml
kernel/lib/steps/: dune  parser.ml  parser_.mly  tokenizer.ml  tokenizer_.ml
kernel/test/: dune
(+52 files in other folders)
